Fix item text overflow with proper flex alignment per item

--- a/styles.css
+++ b/styles.css
@@ -81,9 +81,9 @@ body {
 
 .item a {
     text-decoration: none;
-    display: block;
+    display: flex;
+    flex-direction: column;
     background-repeat: no-repeat;
-    padding: 12px 0;
     height: 100%;
 }
 
@@ -106,13 +106,17 @@ body {
 }
 
 .item .image {
-    height: 80%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 22px;
 }
 
 .item .image img {
     max-width: 100%;
-    height: 75%;
-    margin: auto 0;
+    max-height: 100%;
+    height: 0;
+    flex-grow: 1;
     object-fit: contain;
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -206,7 +210,7 @@ body {
 	100% {
         background-size: 100% 6px;
 
-	    background-position: 0 calc(100% - 10px);
+	    background-position: 0 100%;
 
 		background-image: linear-gradient(
 				115deg,
